# soccer_robot_detector

./: CMakeLists.txt  codex.yaml  package.xml
.github/workflows/: selfcheck.yml
cfg/: SoccerRobotDetector.cfg
config/: params.yaml
include/soccer_robot_detector/: detector.h
launch/: detector.launch
src/: detector.cpp  main.cpp
